--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "repository": {},
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^6.0.2",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.18.0",
+    "node-sass": "^3.3.2",
+    "postcss-loader": "^0.6.0",
+    "react": "^0.13.3",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.3",
     "webpack": "^1.12.1"
   }
 }
