--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^3.3.2",
     "postcss-loader": "^0.6.0",
     "react": "^0.13.3",
+    "react-youtube": "^4.1.2",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.12.1"
