--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.18.0",
     "node-sass": "^3.3.2",
+    "notifyjs": "^1.2.5",
     "postcss-loader": "^0.6.0",
     "react": "^0.13.3",
     "react-youtube": "^4.1.2",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
+    "underscore": "^1.8.3",
     "webpack": "^1.12.1"
   }
 }
